
EXTRA_DIST =  \
core.xml \
fs.xml \
fs_data.xml \
ipc.xml \
kernel.xml \
kernel_arch_arm.xml \
kernel_arch_c2.xml \
kernel_arch_i386.xml \
kernel_arch_mips.xml \
kernel_arch_powerpc.xml \
kernel_arch_ppc.xml \
kernel_arch_x86_64.xml \
locking.xml \
mm.xml \
net.xml \
process.xml \
stack.xml \
statedump.xml \
timer.xml \
user_generic.xml \
xen.xml \
compact.xml

facilities_DATA = \
core.xml \
fs.xml \
fs_data.xml \
ipc.xml \
kernel.xml \
kernel_arch_arm.xml \
kernel_arch_c2.xml \
kernel_arch_i386.xml \
kernel_arch_mips.xml \
kernel_arch_powerpc.xml \
kernel_arch_ppc.xml \
kernel_arch_x86_64.xml \
locking.xml \
mm.xml \
net.xml \
process.xml \
stack.xml \
statedump.xml \
timer.xml \
user_generic.xml \
xen.xml \
compact.xml


facilitiesdir = $(pkgdatadir)/facilities
