# This file is part of the Linux Trace Toolkit viewer
# Copyright (C) 2003-2004 Mathieu Desnoyers
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License Version 2 as
# published by the Free Software Foundation;
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, 
# MA 02111-1307, USA.



#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
#AC_WITH_LTDL  # not needed ?
AM_INIT_AUTOMAKE(lttv,0.12.9-29012009)
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL

AM_PATH_GLIB_2_0(2.4.0, ,AC_MSG_ERROR([glib is required in order to compile LinuxTraceToolkit - download it from ftp://ftp.gtk.org/pub/gtk]) , gmodule)

AM_PATH_GTK_2_0(2.4.0, ,AC_MSG_ERROR([gtk is required in order to compile GUI - download it from ftp://ftp.gtk.org/pub/gtk]) , gmodule)

AC_PATH_PROGS(BASH, bash)

AC_SYS_LARGEFILE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([popt], [poptGetNextOpt], POPT_LIBS="-lpopt",AC_MSG_ERROR([libpopt is required in order to compile LinuxTraceToolkit])  )
#AC_CHECK_LIB([m], [round], M_LIBS="-lm",AC_MSG_ERROR([Mathematical libraries are missing.])  )

AC_CHECK_LIB([util], [forkpty], UTIL_LIBS="-lutil", AC_MSG_ERROR([libutil is
required in order to compile LinuxTraceToolkit]))


# pthread for gdb with dlopen().
AC_CHECK_LIB(pthread, pthread_join,[THREAD_LIBS="-lpthread"], AC_MSG_ERROR([LinuxThreads is required in order to make sure gdb works fine with lttv-gui]))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h pthread.h])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
PACKAGE_CFLAGS="-Wall -Wformat"
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
#AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([select])

#CPPFLAGS="$CPPFLAGS -I"

AM_CONDITIONAL(LTTVSTATIC, test "$enable_lttvstatic" = yes)
lttvlibdir="${libdir}/lttv"
lttvplugindir="${lttvlibdir}/plugins"
#lttlibdir="${libdir}/ltt"
top_lttvdir="\$(top_srcdir)/lttv"
top_lttvwindowdir="\$(top_srcdir)/lttv/modules/gui/lttvwindow"

DEFAULT_INCLUDES="-I\$(top_srcdir) -I\$(top_builddir) -I\$(top_lttvdir) -I\$(top_lttvwindowdir)"

#CPPFLAGS="${GLIB_CFLAGS}"
#AC_SUBST(CPPFLAGS)

lttincludedir="${includedir}/ltt"
lttvincludedir="${includedir}/lttv"
lttvwindowincludedir="${includedir}/lttvwindow"
lttctlincludedir="${includedir}/liblttctl"

AC_SUBST(POPT_LIBS)
AC_SUBST(UTIL_LIBS)
AC_SUBST(THREAD_LIBS)
AC_SUBST(lttvlibdir)
AC_SUBST(lttvplugindir)
#AC_SUBST(lttlibdir)
AC_SUBST(top_lttvdir)
AC_SUBST(top_lttvwindowdir)
AC_SUBST(DEFAULT_INCLUDES)
AC_SUBST(lttincludedir)
AC_SUBST(lttvincludedir)
AC_SUBST(lttvwindowincludedir)
AC_SUBST(lttctlincludedir)

		 #lttv/modules/gui/tutorial/Makefile
		 #lttv/modules/gui/diskperformance/Makefile
AC_CONFIG_FILES([Makefile
		 lttv/Makefile
		 lttv/lttv/Makefile
		 lttv/modules/Makefile
		 lttv/modules/text/Makefile
		 lttv/modules/gui/Makefile
		 lttv/modules/gui/lttvwindow/Makefile
		 lttv/modules/gui/interrupts/Makefile
		 lttv/modules/gui/lttvwindow/lttvwindow/Makefile
		 lttv/modules/gui/lttvwindow/pixmaps/Makefile
		 lttv/modules/gui/controlflow/Makefile
		 lttv/modules/gui/detailedevents/Makefile
		 lttv/modules/gui/statistics/Makefile
     		 lttv/modules/gui/histogram/Makefile
                 lttv/modules/gui/filter/Makefile
                 lttv/modules/gui/tracecontrol/Makefile
                 lttv/modules/gui/resourceview/Makefile
		 ltt/Makefile
     doc/Makefile
     doc/developer/Makefile
     doc/developer/developer_guide/Makefile
     doc/developer/developer_guide/docbook/Makefile
     doc/developer/developer_guide/html/Makefile
     doc/user/Makefile
     doc/user/user_guide/Makefile
     doc/user/user_guide/docbook/Makefile
     doc/user/user_guide/html/Makefile])
AC_OUTPUT
