#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AM_INIT_AUTOMAKE(LinuxTraceToolkit,0.9.7-29052003)
AC_CONFIG_HEADER([config.h])
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([popt], [poptGetNextOpt])
AC_CHECK_LIB([gmodule-2.0], [g_module_open])
AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([glib-2.0], [g_malloc])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([select])

#CPPFLAGS="$CPPFLAGS -I"

lttvplugindir="${libdir}/lttv/plugins"
AC_SUBST(lttvplugindir)

lttlibdir="${libdir}/ltt"
AC_SUBST(lttlibdir)


DEFAULT_INCLUDES="-I\$(top_srcdir)/include"
AC_SUBST(DEFAULT_INCLUDES)

lttvincludedir="${includedir}/lttv"
AC_SUBST(lttvincludedir)

lttincludedir="${includedir}/ltt"
AC_SUBST(lttincludedir)

AC_CONFIG_FILES([Makefile
                 lttv/Makefile
		 lttv/modules/Makefile
		 lttv/modules/gui/Makefile
		 lttv/modules/text/Makefile
                 lttv/plugins/Makefile
		 lttv/plugins/examples/Makefile
		 lttd/Makefile
		 ltt/Makefile
		 include/Makefile
		 include/ltt/Makefile
		 include/lttv/Makefile])
AC_OUTPUT
