#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
#AC_WITH_LTDL  # not needed ?
AM_INIT_AUTOMAKE(LinuxTraceToolkit,0.9.7-30092003)
AM_CONFIG_HEADER([config.h])
AM_PROG_LIBTOOL

AM_PATH_GLIB_2_0(2.0.0, ,AC_MSG_ERROR([glib is required in order to compile LinuxTraceToolkit - download it from ftp://ftp.gtk.org/pub/gtk]) , gmodule)

AM_PATH_GTK_2_0(2.0.0, ,AC_MSG_ERROR([gtk is required in order to compile GUI - download it from ftp://ftp.gtk.org/pub/gtk]) , gmodule)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([popt], [poptGetNextOpt], ,AC_MSG_ERROR([libpopt is required in order to compile LinuxTraceToolkit])  )

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([select])

#CPPFLAGS="$CPPFLAGS -I"

lttvlibdir="${libdir}/lttv"
AC_SUBST(lttvlibdir)

lttvplugindir="${lttvlibdir}/plugins"
AC_SUBST(lttvplugindir)

lttlibdir="${libdir}/ltt"
AC_SUBST(lttlibdir)


top_includedir="\$(top_srcdir)/include"
AC_SUBST(top_includedir)

DEFAULT_INCLUDES="-I\$(top_includedir) -I\$(top_srcdir)"
AC_SUBST(DEFAULT_INCLUDES)

#CPPFLAGS="${GLIB_CFLAGS}"
#AC_SUBST(CPPFLAGS)

lttvincludedir="${includedir}/lttv"
AC_SUBST(lttvincludedir)

lttincludedir="${includedir}/ltt"
AC_SUBST(lttincludedir)

AC_CONFIG_FILES([Makefile
		 lttv/Makefile
		 lttv/modules/Makefile
		 lttv/modules/gui/Makefile
		 lttv/modules/gui/mainWin/Makefile
		 lttv/modules/gui/mainWin/src/Makefile
		 lttv/modules/gui/mainWin/pixmaps/Makefile
		 lttv/modules/gui/API/Makefile
		 lttv/modules/guiControlFlow/Makefile
		 lttv/modules/icons/Makefile
		 lttd/Makefile
		 ltt/Makefile
		 include/Makefile
		 include/ltt/Makefile
		 ltt/convert/Makefile
		 include/lttv/Makefile])
AC_OUTPUT
#		 lttv/modules/examples/Makefile
#		 include/ltt/convert/Makefile
#		 lttv/modules/gui/API/Makefile
#		 lttv/modules/gui/Makefile
# 		 lttv/modules/text/Makefile
#		 lttv/plugins/Makefile
#		 lttv/plugins/examples/Makefile
#		 lttv/modules/coreGUI/Makefile
