AM_CFLAGS= $(PACKAGE_CFLAGS)
LDADD = $(M_LIBS) $(GLPK_LIBS)

check_PROGRAMS = unittest

unittest_SOURCES = \
	data_structures.c\
	data_structures.h\
	graph_functions.c\
	graph_functions.h\
	sync_chain.c\
	sync_chain.h\
	sync_chain_unittest.c\
	event_processing.h\
	event_processing_text.c\
	event_processing_text.h\
	event_matching.h\
	event_matching_broadcast.c\
	event_matching_broadcast.h\
	event_matching_distributor.c\
	event_matching_distributor.h\
	event_matching_tcp.c\
	event_matching_tcp.h\
	event_analysis.h\
	event_analysis_chull.c\
	event_analysis_chull.h\
	event_analysis_eval.c\
	event_analysis_eval.h\
	event_analysis_linreg.c\
	event_analysis_linreg.h\
	factor_reduction.h\
	factor_reduction_accuracy.c\
	factor_reduction_accuracy.h
