
EXTRA_DIST =  \
core.xml \
fs.xml \
ipc.xml \
kernel.xml \
memory.xml \
network.xml \
process.xml \
socket.xml \
statedump.xml \
timer.xml

facilities_DATA = \
core.xml \
fs.xml \
ipc.xml \
kernel.xml \
memory.xml \
network.xml \
process.xml \
socket.xml \
statedump.xml \
timer.xml


facilitiesdir = $(pkgdatadir)/facilities
