
EXTRA_DIST =  \
core.xml \
fs.xml \
ipc.xml \
kernel.xml \
kernel_arch_i386.xml \
stack_arch_i386.xml \
memory.xml \
network.xml \
process.xml \
socket.xml \
statedump.xml \
timer.xml

facilities_DATA = \
core.xml \
fs.xml \
ipc.xml \
kernel.xml \
kernel_arch_i386.xml \
stack_arch_i386.xml \
memory.xml \
network.xml \
process.xml \
socket.xml \
statedump.xml \
timer.xml


facilitiesdir = $(pkgdatadir)/facilities
