
EXTRA_DIST =  \
core.xml \
fs.xml \
ipc.xml \
kernel.xml \
kernel_arch_arm.xml \
kernel_arch_i386.xml \
kernel_arch_mips.xml \
stack_arch_i386.xml \
locking.xml \
memory.xml \
network.xml \
process.xml \
socket.xml \
statedump.xml \
timer.xml

facilities_DATA = \
core.xml \
fs.xml \
ipc.xml \
kernel.xml \
kernel_arch_arm.xml \
kernel_arch_i386.xml \
kernel_arch_mips.xml \
stack_arch_i386.xml \
locking.xml \
memory.xml \
network.xml \
process.xml \
socket.xml \
statedump.xml \
timer.xml


facilitiesdir = $(pkgdatadir)/facilities
